# DLauncher

./: .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  build.sh  devrun.sh  main.cpp
.github/: ISSUE_TEMPLATE.md
.github/workflows/: cmake.yml  commitlint.yml
src/: LockedLineEdit.cpp  LockedLineEdit.h
src/apps/: readApps.cpp  readApps.h
src/components/appRow/: appRow.cpp  appRow.h
src/components/list/: list.cpp  list.h
src/core/: frequency_store.cpp  frequency_store.h  intern.cpp  intern.h  preferences.cpp  preferences.h  xdg.cpp  xdg.h
src/core/apps/: readApps.cpp  readApps.h
src/core/listeners/: kb.cpp
src/listeners/: kb.cpp  kb.h
src/search/: search.h
src/services/search/: search.cpp  search.h
src/theme/: theme.cpp  theme.h
src/ui/: LockedLineEdit.h
src/ui/components/: appRow.cpp  appRow.h  list.cpp  list.h
src/utils/: debug.cpp  debug.h  json.hpp  menu_parser.cpp  menu_parser.h  readApps.cpp  readApps.h  theme.cpp  theme.h  utils.cpp  utils.h
test/: discovery_test.cpp  menu_example.txt  menu_parser_test.cpp  preferences_test.cpp
themes/: ayu.qss  catpp.qss  catppuccin.qss  dark.qss  dracula.qss  light.qss  solarized.qss  tokyo-night.qss
